@@ -1,16 +1,18 @@
 package ua.klymenko.tutor_crm.entities;
 
 import jakarta.persistence.*;
+import jakarta.validation.constraints.NotNull;
+import jakarta.validation.constraints.Size;
 import lombok.*;
+import org.hibernate.annotations.ColumnDefault;
 import org.hibernate.annotations.DynamicUpdate;
-import org.springframework.data.annotation.CreatedDate;
-import org.springframework.data.annotation.LastModifiedDate;
 import org.springframework.security.core.GrantedAuthority;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
+import ua.klymenko.tutor_crm.entities.enums.UserRole;
 
-import java.time.LocalDateTime;
-import java.util.*;
+import java.time.Instant;
+import java.util.Collection;
+import java.util.List;
 
 @Getter
 @Setter
@@ -19,42 +21,58 @@ import java.util.*;
 @NoArgsConstructor
 @AllArgsConstructor
 @DynamicUpdate
-@Table(name = "user")
+@Table(name = "user", schema = "tutor_crm")
 public class User implements UserDetails {
     @Id
     @GeneratedValue(strategy = GenerationType.IDENTITY)
     @Column(name = "id", nullable = false)
     private Long id;
 
+    @Size(max = 64)
+    @NotNull
     @Column(name = "name", nullable = false, length = 64)
     private String name;
 
+    @Size(max = 64)
+    @NotNull
     @Column(name = "surname", nullable = false, length = 64)
     private String surname;
 
+    @Size(max = 64)
+    @NotNull
     @Column(name = "email", nullable = false, length = 64)
     private String email;
 
-    @Column(name = "password_hash", nullable = false, length = 256)
-    private String passwordHash;
-
+    @Size(max = 20)
+    @NotNull
     @Column(name = "phone", nullable = false, length = 20)
     private String phone;
 
-    @CreatedDate
-    @Column(name = "created_at", nullable = false, updatable = false)
-    private LocalDateTime createdAt;
+    @Size(max = 256)
+    @NotNull
+    @Column(name = "password_hash", nullable = false, length = 256)
+    private String passwordHash;
 
-    @LastModifiedDate
+    @NotNull
+    @Enumerated(EnumType.STRING)
+    @Column(name = "role", nullable = false)
+    private UserRole role;
+
+    @NotNull
+    @Column(name = "created_at", nullable = false)
+    private Instant createdAt;
+
     @Column(name = "updated_at")
-    private LocalDateTime updatedAt;
+    private Instant updatedAt;
 
-    @OneToMany(mappedBy = "user")
-    private Set<Student> students = new LinkedHashSet<>();
+    @NotNull
+    @ColumnDefault("false")
+    @Column(name = "is_approved", nullable = false)
+    private Boolean isApproved = false;
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.singletonList(new SimpleGrantedAuthority("ROLE_TUTOR"));
+        return List.of();
     }
 
     @Override
